"""Entity registration snapshot tests.

Verifies the exact set of entities each platform registers for different
camera configurations. This prevents accidental entity addition/removal
regressions (like the v1.4.0-beta.3 night light entity removal).

Uses pytest-syrupy for snapshot assertions. To update snapshots after an
intentional change, run::

    pytest tests/unit/test_entity_registration.py --snapshot-update

See https://github.com/syrupy-project/syrupy for details.
"""

from __future__ import annotations

import importlib
import sys
from dataclasses import dataclass
from typing import Any
from unittest.mock import AsyncMock, MagicMock

import pytest
from syrupy.assertion import SnapshotAssertion

_ = sys.modules.setdefault("turbojpeg", MagicMock(TurboJPEG=MagicMock()))

_MODELS = importlib.import_module("aionanit.models")
Baby = _MODELS.Baby
CameraState = _MODELS.CameraState
ConnectionInfo = _MODELS.ConnectionInfo
ConnectionState = _MODELS.ConnectionState
ControlState = _MODELS.ControlState
SensorState = _MODELS.SensorState
SettingsState = _MODELS.SettingsState


@dataclass(frozen=True)
class _PlaybackStateFallback:
    playing: bool = False
    current_track: str | None = None
    available_tracks: tuple[str, ...] = ()


PlaybackState = getattr(_MODELS, "PlaybackState", _PlaybackStateFallback)

from custom_components.nanit import (
    binary_sensor as binary_sensor_platform,
)
from custom_components.nanit import (
    camera as camera_platform,
)
from custom_components.nanit import (
    light as light_platform,
)
from custom_components.nanit import (
    media_player as media_player_platform,
)
from custom_components.nanit import (
    number as number_platform,
)
from custom_components.nanit import (
    select as select_platform,
)
from custom_components.nanit import (
    sensor as sensor_platform,
)
from custom_components.nanit import (
    switch as switch_platform,
)
from custom_components.nanit.aionanit_sl.models import SoundLightFullState

# ---------------------------------------------------------------------------
# Helpers
# ---------------------------------------------------------------------------


def _serialize_entities(entities: list[Any]) -> list[dict[str, Any]]:
    """Extract stable, snapshot-worthy attributes from a list of HA entities.

    Returns a sorted list of dicts so that snapshot diffs are deterministic
    and easy to review.
    """
    result: list[dict[str, Any]] = []
    for entity in entities:
        info: dict[str, Any] = {
            "class": type(entity).__name__,
            "unique_id": entity.unique_id,
        }

        if hasattr(entity, "_attr_translation_key"):
            info["translation_key"] = entity._attr_translation_key
        elif hasattr(entity, "entity_description"):
            info["translation_key"] = getattr(entity.entity_description, "translation_key", None)

        if hasattr(entity, "entity_description"):
            info["device_class"] = getattr(entity.entity_description, "device_class", None)
            info["entity_category"] = getattr(entity.entity_description, "entity_category", None)
        else:
            info["device_class"] = getattr(entity, "_attr_device_class", None)
            info["entity_category"] = getattr(entity, "_attr_entity_category", None)

        features = getattr(entity, "_attr_supported_features", None)
        if features is not None:
            info["supported_features"] = int(features)

        color_modes = getattr(entity, "_attr_supported_color_modes", None)
        if color_modes is not None:
            info["color_modes"] = sorted(str(m) for m in color_modes)

        device_info = entity.device_info
        if device_info:
            identifiers = device_info.get("identifiers", set())
            info["device_identifiers"] = sorted(tuple(i) for i in identifiers)

        result.append(info)

    return sorted(result, key=lambda e: e["unique_id"])


# ---------------------------------------------------------------------------
# Mock coordinator factories
# ---------------------------------------------------------------------------


def _camera_state() -> CameraState:
    kwargs: dict[str, Any] = {
        "sensors": SensorState(temperature=22.5, humidity=50.0, light=100),
        "settings": SettingsState(volume=50, sleep_mode=False, night_vision=True),
        "control": ControlState(),
        "connection": ConnectionInfo(state=ConnectionState.CONNECTED),
    }
    if "playback" in getattr(CameraState, "__dataclass_fields__", {}):
        kwargs["playback"] = PlaybackState()
    return CameraState(**kwargs)


def _push_coordinator() -> MagicMock:
    coordinator = MagicMock()
    coordinator.data = _camera_state()
    coordinator.camera = MagicMock(uid="cam_1", baby_uid="baby_1")
    coordinator.baby = Baby(uid="baby_1", name="Nursery", camera_uid="cam_1")
    coordinator.last_update_success = True
    coordinator.connected = True
    coordinator.async_request_refresh = AsyncMock()
    return coordinator


def _cloud_coordinator() -> MagicMock:
    coordinator = MagicMock()
    coordinator.data = []
    coordinator.baby = Baby(uid="baby_1", name="Nursery", camera_uid="cam_1")
    coordinator.async_request_refresh = AsyncMock()
    return coordinator


def _sl_coordinator(baby: Baby | None = None, via_camera_uid: str | None = "cam_1") -> MagicMock:
    coordinator = MagicMock()
    coordinator.data = SoundLightFullState()
    coordinator.baby = baby or Baby(
        uid="baby_1", name="Nursery", camera_uid="cam_1", speaker_uid="speaker_1"
    )
    coordinator.last_update_success = True
    coordinator.connected = True
    coordinator.via_camera_uid = via_camera_uid
    coordinator.sound_light = MagicMock()
    coordinator.sound_light.speaker_uid = "speaker_1"
    coordinator.sound_light.async_set_light_enabled = AsyncMock()
    coordinator.sound_light.async_set_brightness = AsyncMock()
    coordinator.sound_light.async_set_color = AsyncMock()
    coordinator.sound_light.async_set_power = AsyncMock()
    coordinator.sound_light.async_set_sound_on = AsyncMock()
    coordinator.sound_light.async_set_track = AsyncMock()
    coordinator.sound_light.async_set_volume = AsyncMock()
    coordinator.sound_light.connection_mode = "local"
    return coordinator


def _network_coordinator() -> MagicMock:
    coordinator = MagicMock()
    coordinator.data = MagicMock()
    coordinator.baby = Baby(uid="baby_1", name="Nursery", camera_uid="cam_1")
    coordinator.last_update_success = True
    return coordinator


# ---------------------------------------------------------------------------
# Scenario builders
# ---------------------------------------------------------------------------


def _baseline_scenario() -> tuple[dict[str, Any], dict[str, Any]]:
    """Camera with push coordinator only (no S&L, no cloud, no network)."""
    push = _push_coordinator()
    cam_data = MagicMock()
    cam_data.push_coordinator = push
    cam_data.camera = push.camera
    cam_data.cloud_coordinator = None
    cam_data.network_coordinator = None
    return {"cam_1": cam_data}, {}


def _full_scenario() -> tuple[dict[str, Any], dict[str, Any]]:
    """Camera with all optional coordinators plus a paired S&L speaker."""
    push = _push_coordinator()
    cam_data = MagicMock()
    cam_data.push_coordinator = push
    cam_data.camera = push.camera
    cam_data.cloud_coordinator = _cloud_coordinator()
    cam_data.network_coordinator = _network_coordinator()
    speaker_data = MagicMock()
    speaker_data.coordinator = _sl_coordinator()
    speaker_data.speaker_uid = "speaker_1"
    return {"cam_1": cam_data}, {"speaker_1": speaker_data}


def _speaker_only_scenario() -> tuple[dict[str, Any], dict[str, Any]]:
    """Standalone S&L speaker on an account with no camera."""
    baby = Baby(uid="baby_1", name="Nursery", camera_uid="", speaker_uid="speaker_1")
    speaker_data = MagicMock()
    speaker_data.coordinator = _sl_coordinator(baby=baby, via_camera_uid=None)
    speaker_data.speaker_uid = "speaker_1"
    return {}, {"speaker_1": speaker_data}


def _mock_entry(cameras: dict[str, Any], speakers: dict[str, Any]) -> MagicMock:
    return MagicMock(runtime_data=MagicMock(cameras=cameras, speakers=speakers))


# ---------------------------------------------------------------------------
# Platform setup + capture helper
# ---------------------------------------------------------------------------


async def _setup_and_capture(
    platform_module: Any,
    scenario: tuple[dict[str, Any], dict[str, Any]],
) -> list[Any]:
    """Call a platform's async_setup_entry and return the captured entities."""
    entry = _mock_entry(*scenario)
    async_add_entities = MagicMock()
    await platform_module.async_setup_entry(MagicMock(), entry, async_add_entities)
    assert async_add_entities.call_count == 1, "async_add_entities should be called exactly once"
    return list(async_add_entities.call_args.args[0])


# ---------------------------------------------------------------------------
# Snapshot tests -- 7 platforms x 2 scenarios = 14 test cases
# ---------------------------------------------------------------------------


@pytest.mark.parametrize(
    ("scenario_name", "scenario_factory"),
    [
        ("baseline", _baseline_scenario),
        ("full", _full_scenario),
        ("speaker_only", _speaker_only_scenario),
    ],
    ids=["baseline", "full", "speaker_only"],
)
class TestEntityRegistration:
    async def test_camera(
        self,
        scenario_name: str,
        scenario_factory: Any,
        snapshot: SnapshotAssertion,
    ) -> None:
        entities = await _setup_and_capture(camera_platform, scenario_factory())
        assert _serialize_entities(entities) == snapshot

    async def test_sensor(
        self,
        scenario_name: str,
        scenario_factory: Any,
        snapshot: SnapshotAssertion,
    ) -> None:
        entities = await _setup_and_capture(sensor_platform, scenario_factory())
        assert _serialize_entities(entities) == snapshot

    async def test_binary_sensor(
        self,
        scenario_name: str,
        scenario_factory: Any,
        snapshot: SnapshotAssertion,
    ) -> None:
        entities = await _setup_and_capture(binary_sensor_platform, scenario_factory())
        assert _serialize_entities(entities) == snapshot

    async def test_switch(
        self,
        scenario_name: str,
        scenario_factory: Any,
        snapshot: SnapshotAssertion,
    ) -> None:
        entities = await _setup_and_capture(switch_platform, scenario_factory())
        assert _serialize_entities(entities) == snapshot

    async def test_number(
        self,
        scenario_name: str,
        scenario_factory: Any,
        snapshot: SnapshotAssertion,
    ) -> None:
        entities = await _setup_and_capture(number_platform, scenario_factory())
        assert _serialize_entities(entities) == snapshot

    async def test_light(
        self,
        scenario_name: str,
        scenario_factory: Any,
        snapshot: SnapshotAssertion,
    ) -> None:
        entities = await _setup_and_capture(light_platform, scenario_factory())
        assert _serialize_entities(entities) == snapshot

    async def test_select(
        self,
        scenario_name: str,
        scenario_factory: Any,
        snapshot: SnapshotAssertion,
    ) -> None:
        entities = await _setup_and_capture(select_platform, scenario_factory())
        assert _serialize_entities(entities) == snapshot

    async def test_media_player(
        self,
        scenario_name: str,
        scenario_factory: Any,
        snapshot: SnapshotAssertion,
    ) -> None:
        scenario = scenario_factory()
        entities = await _setup_and_capture(media_player_platform, scenario)
        assert _serialize_entities(entities) == snapshot
        # One media player per camera (it wraps the camera's sound machine)
        assert len(entities) == len(scenario[0])
